dirty backport to java 11